--- a/taskagotchi/src/components/TaskLine/TaskLine.css
+++ b/taskagotchi/src/components/TaskLine/TaskLine.css
@@ -5,13 +5,16 @@
     align-items: center;
     margin-bottom: 10px;
     cursor: pointer;
+    border: 2px solid #000000;
+    border-radius: 12px;
+    padding: 10px;
 }
 
 .task-checkbox {
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     border-radius: 20%;
-    border: 1px solid #ccc;
+    border: 2px solid #000000;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -30,7 +33,9 @@
 }
 
 .task-priority {
+    text-align: right;
     padding: 2px 6px;
-    border-radius: 4px;
-    color: white;
+    border: solid 2px #000000;
+    border-radius: 10px;
+    color: rgb(0, 0, 0);
 }
